<resources>
    <string name="app_name">Solti\nInmobiliaria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="chk_remember">Recuérdame</string>
    <string name="description_login">Bienvenido de nuevo</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>

    <string name="error_login">Hemos detectado un comportamiento extraño, por favor intenta más tarde (1)</string>
    <string name="tv_accept">Aceptar</string>
    <string name="tv_no_internet">No hay conexión a internet</string>
    <string name="txt_fail_search_distribution">Sin resultados encontrados</string>
    <string name="txt_start_search_distribution">Inicia tu búsqueda</string>
    <string name="txt_next">Siguiente</string>
    <string name="txt_code_company">Código</string>
    <string name="txt_title_close_session">¿Estás seguro que \ndeseas cerrar sesión?</string>
    <string name="txt_cancel">Cancelar</string>


</resources>