<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.gonlg.erp_distribution.ui.activity.login.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/log_erp" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnl_code_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/txt_code_company"
                android:textColor="@color/color_text"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_code_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_input_text"
                    android:fontFamily="@font/montserrat"
                    android:imeOptions="actionNext"
                    android:textAllCaps="true"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/color_text"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat"
                android:text="Debe contener 8 dígitos"
                android:textColor="#FF7682"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatImageButton
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            android:id="@+id/btn_validate_code"
            android:layout_gravity="bottom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_input_text"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/montserrat"
            android:src="@drawable/ic_close"
            android:tint="@color/white"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnl_password"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnl_code_company"
        app:layout_constraintVertical_bias="0.205">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/color_text"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:background="@drawable/shape_input_text"
                    android:textColor="@color/color_text"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_error_input_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat"
                android:text="Debe contener 8 dígitos"
                android:textColor="#FF7682"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnl_email"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/password"
            android:textColor="@color/color_text"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/ic_show_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input_text"
                android:fontFamily="@font/montserrat"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                android:padding="0dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint_text"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginBottom="8dp"
        android:text="@string/error_login"
        android:textAlignment="center"
        android:textColor="@color/color_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/shape_border_button"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/montserrat"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnl_password"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/lnl_content_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnl_password"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/teal_700"
            android:fontFamily="@font/montserrat"
            android:text="@string/chk_remember" />

        <TextView
            android:visibility="gone"
            android:id="@+id/text_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="¿Olvidaste tu contraseña?"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.constraintlayout.widget.ConstraintLayout>